build structure for 2014

--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,7 @@
 \etocsettocstyle{}{}
 
 \pagestyle{fancy}
+\include{\TexPath/2014}
 \include{\TexPath/2015}
 \include{\TexPath/2016}
 \include{\TexPath/2017}
