forgot style file

--- a/sty/eason.sty
+++ b/sty/eason.sty
@@ -88,6 +88,8 @@
 % Other Math Symbols
 \DeclareMathOperator{\modulo}{mod}
 
+\newcommand{\vect}[1]{\mathbf{#1}}
+\newcommand{\bvect}[1]{\overrightarrow{#1}}
 \newcommand{\divides}{\mid}
 \newcommand{\notdivides}{\nmid}
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert}
