--- a/main.tex
+++ b/main.tex
@@ -20,6 +20,10 @@
 \etocsettocstyle{}{}
 
 \pagestyle{fancy}
+\include{\TexPath/2010}
+\include{\TexPath/2011}
+\include{\TexPath/2012}
+\include{\TexPath/2013}
 \include{\TexPath/2014}
 \include{\TexPath/2015}
 \include{\TexPath/2016}
